--- a/css/estilos.css
+++ b/css/estilos.css
@@ -74,6 +74,12 @@ border-radius: 5px;
     border-radius: 5px;
 
 }
+.tecnologia{
+    background-color: #e20000;
+}
+.card{
+    
+}
 .link {
     color:#e20000;
 }
