--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,9 +25,15 @@ h1{
     color: #e20000;
     font-size: 36px;
 }
+.h2{
+    color:#370a6d;
+}
 p{
     color: #6a6a6a;
     font-size: 16px;
+}
+.perfil{
+    border-radius: 1px;
 }
 textarea{
 height: 150px;
@@ -76,9 +82,6 @@ border-radius: 5px;
 }
 .tecnologia{
     background-color: #e20000;
-}
-.card{
-    
 }
 .link {
     color:#e20000;
