--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,7 +25,7 @@ h1{
     color: #e20000;
     font-size: 36px;
 }
-.h2{
+.t-h2{
     color:#370a6d;
 }
 p{
@@ -70,6 +70,7 @@ height: 150px;
     height: 200px;
     width: 200px;
     margin-left: 500px;
+    vertical-align:middle;
 }
 .p-1 {
 border-radius: 5px;
